...
            if success {
                DispatchQueue.main.async {
                    
                    _ = CoreDataHelper.shared.saveToCoreData(id: self.image!.id, data: data!, author: self.image!.author, completion: { success, message in
                        if success {
                            self.checkExisitingObject()
                            self.alert(title: "Success", message: "Added to Favourites")
                        } else {
                            self.alert(title: "Error", message: message)
                        }
                    })
                }
            } else {
...
