...
                            <constraint firstItem="994-qF-vVi" firstAttribute="leading" secondItem="Bgf-vq-1Tv" secondAttribute="leading" id="VhI-bP-2a7"/>
                            <constraint firstItem="908-gv-FMg" firstAttribute="height" secondItem="YNE-FU-J7K" secondAttribute="height" priority="250" id="c8r-0c-dZi"/>
                            <constraint firstItem="908-gv-FMg" firstAttribute="width" secondItem="YNE-FU-J7K" secondAttribute="width" id="hk8-G4-9rH"/>
                            <constraint firstAttribute="bottom" secondItem="994-qF-vVi" secondAttribute="bottom" id="vPa-J3-AA8"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="LuO-aM-LYJ">
                        <barButtonItem key="backBarButtonItem" title=" " id="rj6-5W-BJu"/>
                        <barButtonItem key="rightBarButtonItem" id="psu-0G-5GJ"/>
                    </navigationItem>
                    <connections>
                        <outlet property="addToFavrtsBtn" destination="RBs-vx-dhx" id="1Ng-St-uRs"/>
                        <outlet property="authorLbl" destination="jP7-jQ-75z" id="uKW-x9-l2U"/>
...
